<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideResponsiveBoundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <View
        android:id="@+id/menuBackground"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/pearl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideResponsiveBoundary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="@dimen/iconSizeBig"
        android:layout_height="@dimen/iconSizeBig"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guideTop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/menuItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footerSection"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/btnClose">

        <TextView android:id="@+id/navHome" style="@style/NavMenuItem" android:text="@string/home" />
        <TextView android:id="@+id/navProfile" style="@style/NavMenuItem" android:text="@string/profile" />
        <TextView android:id="@+id/navAnimeList" style="@style/NavMenuItem" android:text="@string/anime_list" />
        <TextView android:id="@+id/navMangaList" style="@style/NavMenuItem" android:text="@string/manga_list" />
        <TextView android:id="@+id/navBrowse" style="@style/NavMenuItem" android:text="@string/browse" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideBottom"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart">

        <TextView
            android:id="@+id/navNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/textFieldHorizontalPadding"
            android:fontFamily="@font/comfortaa"
            android:text="@string/notifications"
            android:textSize="@dimen/titleFontSize"
            app:drawableStartCompat="@drawable/ic_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/navSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginNormal"
            android:drawablePadding="@dimen/textFieldHorizontalPadding"
            android:fontFamily="@font/comfortaa"
            android:text="@string/settings"
            android:textSize="@dimen/titleFontSize"
            app:drawableStartCompat="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navNotifications" />

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="@dimen/iconSizeLarge"
            android:layout_height="@dimen/iconSizeLarge"
            android:layout_marginTop="@dimen/marginNormal"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/profile_picture"
            app:layout_constraintEnd_toStartOf="@+id/navUsername"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navSettings" />

        <TextView
            android:id="@+id/navUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginSmall"
            android:fontFamily="@font/comfortaa"
            android:text="@string/username"
            android:textSize="@dimen/titleFontSize"
            app:layout_constraintBottom_toBottomOf="@id/userAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userAvatar"
            app:layout_constraintTop_toTopOf="@id/userAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>