<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/_100"
        android:textColor="@color/darkBlue35op"
        android:textSize="@dimen/labelFontSize"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/_150"
        android:textColor="@color/darkBlue35op"
        android:textSize="@dimen/labelFontSize"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/_200"
        android:textColor="@color/darkBlue35op"
        android:textSize="@dimen/labelFontSize"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profileProgressBarHeight"
        android:layout_marginTop="@dimen/marginTiny"
        android:progressDrawable="@drawable/stat_progress_bar"
        app:layout_constraintTop_toBottomOf="@id/tvM2"
        android:progress="50"
        android:max="100"/>

</androidx.constraintlayout.widget.ConstraintLayout>